# eval

./: .env.production  .gitignore  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  README.md  README_EVALUATION.md  README_en.md  dashboard.html  deploy_remote.sh  engineer_level_old.md  features.md  keywords.md  pyproject.toml  pytest.ini  server.py  setup_remote_server.sh  start_dev.sh  start_production.sh  start_server.sh  stop_dev.sh  test_cache.py
audit/: .oss-audit.yaml.example  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  QUICKSTART.md  README.md  RELEASE_CHECKLIST.md  SECURITY.md  config.yaml.example  docker-compose.yml  main.py  performance_baselines.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
audit/docs/: OSS_AUDIT_2.0_FINAL_DESIGN.md  SCORING_STANDARDS.md
audit/docs/ci/: ENABLE_GITEE_CI.md  gitee-go-example.yml
audit/docs/proposals/: PR-0001-models-reporting-refactor.md
audit/docs/sphinx/: Makefile  conf.py  configuration.rst  quickstart.rst
audit/docs/sphinx/_autosummary/: oss_audit.core.adaptive_agent.rst  oss_audit.core.decision_agent.rst  oss_audit.core.project_detector.rst  oss_audit.utils.ai_analyzer.rst
audit/docs/sphinx/_build/html/: .buildinfo  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js
audit/docs/sphinx/_build/html/.doctrees/: environment.pickle  index.doctree  installation.doctree
audit/docs/sphinx/_build/html/.doctrees/api/: agents.doctree  (+1 more)
audit/docs/sphinx/_build/html/_autosummary/: oss_audit.core.adaptive_agent.html  oss_audit.core.audit_runner.html  oss_audit.core.decision_agent.html  oss_audit.core.project_detector.html  oss_audit.core.recommendation_agent.html  oss_audit.core.report_generator.html  oss_audit.core.tool_executor.html  oss_audit.core.tool_registry.html  oss_audit.plugins.html  oss_audit.utils.ai_analyzer.html
audit/docs/sphinx/_build/html/_modules/: index.html
audit/docs/sphinx/_build/html/_sources/: index.rst.txt  installation.rst.txt
audit/docs/sphinx/_build/html/_static/: documentation_options.js
audit/docs/sphinx/_build/html/api/: agents.html  core.html
audit/docs/sphinx/_static/: custom.css
audit/docs/sphinx/api/: agents.rst  core.rst  plugins.rst  utils.rst
audit/docs/sphinx/development/: architecture.rst  contributing.rst  testing.rst
audit/docs/sphinx/examples/: basic_usage.rst
audit/reports/evaluator/: evaluator_adaptive_audit_report.json  evaluator_audit_report.html  evaluator_recommendations.html
audit/reports/evaluator/dimensions/: dimension_10_开源协议与法律合规.html  dimension_11_社区治理与贡献机制.html  dimension_12_舆情与风险监控.html  dimension_13_数据与算法合规审核.html  dimension_14_IP（知识产权）.html  dimension_1_代码结构与可维护性.html  dimension_2_测试覆盖与质量保障.html  dimension_3_构建与工程可重复性.html  dimension_4_依赖与许可证合规.html  dimension_5_安全性与敏感信息防护.html  dimension_6_CI_CD 自动化保障.html  dimension_7_使用文档与复现性.html  dimension_8_接口与平台兼容性.html  dimension_9_协作流程与代码规范.html
audit/reports/evaluator/tools/: bandit_report.html  coverage_report.html  pylint_report.html  pytest_report.html  python_plugin_bandit_report.html  python_plugin_black_report.html  python_plugin_coverage_report.html  python_plugin_flake8_report.html  python_plugin_gitleaks_report.html  python_plugin_isort_report.html  python_plugin_mypy_report.html  python_plugin_pylint_report.html  python_plugin_pytest_report.html  python_plugin_safety_report.html  python_plugin_semgrep_report.html  python_plugin_sonarqube-scanner_report.html  python_plugin_syft_report.html  python_plugin_trivy_report.html  semgrep_report.html  sonarqube-scanner_report.html
audit/scripts/: install_deps.py  run_audit.ps1  run_audit.sh  run_tests.py  setup_dev_env.py  test_docker.py
audit/src/: __init__.py
audit/src/oss_audit/: __init__.py
audit/src/oss_audit/config/: language_detection.yaml  project_profiles.yaml  tools_registry.yaml
audit/src/oss_audit/core/: __init__.py  adaptive_agent.py  audit_runner.py  container_manager.py  decision_agent.py  dimension_analyzer.py  models.py  project_detector.py  recommendation_agent.py  report_generator.py  simple_ml_model.py  smart_tool_selector.py  strategy_engine.py  tool_executor.py  tool_knowledge_base.py  tool_registry.py
audit/src/oss_audit/core/report_generators/: dimension_formatter.py  dimension_html_generator.py  html_generator.py
audit/src/oss_audit/core/reporting/: __init__.py  exporters.py  renderers.py
audit/src/oss_audit/plugins/: __init__.py  base.py  registry.py  result_validator.py
audit/src/oss_audit/plugins/language_plugins/: __init__.py  go_plugin.py  java_plugin.py  javascript_plugin.py  python_plugin.py
audit/src/oss_audit/utils/: ai_analyzer.py  consistency_checker.py  deterministic_cache.py  git_platform_analyzer.py  git_utils.py  gitea_analyzer.py  gitee_analyzer.py  github_analyzer.py  gitlab_analyzer.py  multi_platform_org_analyzer.py  performance_monitor.py
audit/tests/: conftest.py  test_adaptive_agent_simple.py  test_ai_analyzer.py  test_ai_analyzer_simple.py  test_audit_runner.py  test_audit_runner_performance.py  test_audit_runner_plugins.py  test_container_integration.py  test_container_manager.py  test_decision_agent.py  test_docker_simple.py  test_docker_workflow.py  test_multi_language_plugins.py  test_multi_platform_analyzer.py  test_performance_integration_simple.py  test_performance_monitor.py  test_plugin_integration.py  test_plugin_system.py  test_project_detector.py  test_recommendation_agent_simple.py  test_report_generator_simple.py  test_tool_executor_expanded.py
(+193 files in other folders)
